--- a/src/components/GameBoard/GameBoard.module.css
+++ b/src/components/GameBoard/GameBoard.module.css
@@ -1,14 +1,20 @@
-#gameBoard {
+ol {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+#gameBoardList {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 2rem;
-  margin: 3rem 0;
+  gap: 1.5rem;
+  margin: 2rem 0;
   padding: 0;
   flex-direction: column;
 }
 
-#gameBoard ol {
+#gameBoardList ol {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -17,13 +23,13 @@
   padding: 0;
 }
 
-#gameBoard button {
-  width: 8rem;
-  height: 8rem;
+#gameBoardList button {
+  width: 6rem;
+  height: 6rem;
   border: none;
   background: #aca788;
   color: #3f3b00;
-  font-size: 5rem;
+  font-size: 4rem;
   cursor: pointer;
   font-family: "Caprasimo", cursive;
   padding: 1rem;
