--- a/src/index.css
+++ b/src/index.css
@@ -32,96 +32,15 @@ body {
   min-height: 110rem;
 }
 
-header {
-  text-align: center;
-}
-
-header img {
-  width: 8rem;
-  object-fit: contain;
-  margin: 3rem auto 1rem auto;
-  filter: drop-shadow(0 0 8px rgba(0, 0, 0, 0.4));
-}
-
-h1 {
-  font-family: "Caprasimo", cursive;
-  font-size: 3rem;
-  margin: 0 auto 3rem auto;
-  color: #3f3b00;
-}
-
-#gameContainer {
-  max-width: 45rem;
-  margin: 3rem auto;
-  padding: 2rem;
-  border-radius: 6px;
-  background: linear-gradient(#383624, #282617);
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-  position: relative;
-}
-
-#players {
-  list-style: none;
-  padding: 0;
-  margin: 1rem 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
-}
-
-#players li {
-  display: flex;
-  align-items: center;
-  width: 50%;
-  border: 2px solid transparent;
-}
-
-#players.highlight-player li.active {
-  border-color: #f6e35a;
-  animation: pulse 2s infinite ease-in-out;
-}
-
-#players.highlight-player li.active .player-name,
-#players.highlight-player li.active .player-symbol {
-  color: #f6e35a;
-}
-
-#players button {
-  width: 3rem;
-  border: none;
-  background: none;
-  color: #c3ba78;
-  font-size: 0.9rem;
-  cursor: pointer;
-  transition: color 0.2s;
-  padding: 0.5rem 0.25rem 0.25rem 0.25rem;
-  text-align: center;
-}
-
-#players button:hover {
-  color: #f8ca31;
-}
-
-ol {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
+/*header img {*/
+/*  width: 8rem;*/
+/*  object-fit: contain;*/
+/*  margin: 3rem auto 1rem auto;*/
+/*  filter: drop-shadow(0 0 8px rgba(0, 0, 0, 0.4));*/
+/*}*/
 
 #pre-game {
   text-align: center;
-}
-
-#pre-game button {
-  cursor: pointer;
-  background: none;
-  color: #f8c031;
-  border: none;
-  font-family: "Caprasimo", cursive;
-  font-size: 4rem;
-  text-shadow: 0 0 12px rgba(0, 0, 0, 0.7);
-  animation: pulse-text-size 2s infinite ease-out;
 }
 
 #game-over {
